Fix #102574: Don't Show "Rename" for Volume and & System lists

For File Browser "System" and "Volumes" lists, the item names cannot be
changed by users yet the tooltip says "Double click to rename". This PR
just removes that text for these non-editable lists.