source/blender/makesrna/intern/rna_space.c
@@ -7152,7 +7152,7 @@ static void rna_def_space_filebrowser(BlenderRNA *brna)
                                     NULL,
                                     NULL,
                                     NULL);
-  RNA_def_property_clear_flag(prop, PROP_EDITABLE);
+  RNA_def_property_flag(prop, PROP_EDITABLE);
 
   prop = RNA_def_int(srna,
                      "bookmarks_active",
@@ -7183,7 +7183,7 @@ static void rna_def_space_filebrowser(BlenderRNA *brna)
                                     NULL,
                                     NULL,
                                     NULL);
-  RNA_def_property_clear_flag(prop, PROP_EDITABLE);
+  RNA_def_property_flag(prop, PROP_EDITABLE);
 
   prop = RNA_def_int(srna,
                      "recent_folders_active",
